<resources>
    <string name="app_name">FinalProject-GP11</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="grocery">Grocery</string>
    <string name="movie">Movie</string>
    <string name="food">Food</string>
    <string name="salary">Salary</string>
    <string name="investments">Investments</string>
    <string name="interest">Interest</string>
</resources>