<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ScrollView
        android:paddingHorizontal="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_boxedEdges="all"
            tools:context="Fragments.ExpenseFragment">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="EXPENSES"
                android:textStyle="bold"
                android:layout_marginTop="120dp"
                android:textColor="@color/primary"
                android:layout_marginBottom="15dp"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/thisMonthSpendingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:text="This Month"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/thisMonthSpendingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:text="0.00"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/todaySpendingLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="@color/grey"
                android:text="Today"
                android:textSize="10sp" />

            <TextView
                android:id="@+id/todaySpendingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary"
                android:layout_marginTop="10dp"
                android:text="Monthly Stats"
                android:textSize="10sp" />

            <!-- Grocery -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grocery"
                android:layout_gravity="start"
                android:textSize="8sp"
                android:textStyle="bold"/>
            <ProgressBar
                android:id="@+id/groceryProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="50"
                android:progressTint="@color/primary"/>

            <!-- Food -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food"
                android:layout_gravity="start"
                android:textSize="8sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />
            <ProgressBar
                android:id="@+id/foodProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="50"
                android:progressTint="@color/primary"/>

            <!-- Movie -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie"
                android:layout_gravity="start"
                android:textSize="8sp"
                android:textStyle="bold"
                android:layout_marginTop="8dp" />
            <ProgressBar
                android:id="@+id/movieProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:progress="50"
                android:progressTint="@color/primary"/>
        </LinearLayout>
    </ScrollView>
</androidx.wear.widget.BoxInsetLayout>

